2005-09-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.project.splitmodel.ave: Delete shapes from
	existing zone shapefiles if no records are found for this zone any more;
	fixes bug #1296212

2005-09-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.splitmodel.ave: Fixed the splitting function

2005-09-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Updated with latest information.
	* dcwatdes.project.mergemodel.ave:
	* dcwatdes.project.splitmodel.ave: clearing the selection first
	* dcwatdes.project.extractmodel.ave: Allow to select models to extract
	* dcwatdes.table.calculatebitcode.ave: Bytecode numbering starts at 1
	instead of 0 now.
	
2005-09-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdesextension.make.ave: Version number is 2.12.2+cvs now
	* dcwates.project.splitmodel.ave: Added option to create views

2005-09-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.model.epanet.loadresultsforstep.ave:
	* dcwatdes.project.extractmodel.ave:
	* dcwatdes.project.splitmodel.ave: Now calling .updateDefBitmap after
	each setDefinition() call. Fixes a critical bug (shapefile changes).
	* build.xml:
	* dcwatdesextension.make.ave: Version number 2.12.2 now.

2005-09-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.table.calculatebitcode.ave: Added more calculation options
	* dcwatdes.model.epanet.writeinpfile.ave: Collapsing valve.setting
	values that contain "closed" to "closed"
	* dcwatdes.dialog.epanetthemes.initialize.ave: better initial theme
	selection
	
2005-08-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.bitcode.or.ave:
	* dcwatdes.bitcode.xor.ave: Don't drop "1"'s if one of the input
	strings is shorter.
	* dcwatdes.table.calculatebitcode.ave: Allow to select Bitcode.xor
	to build up the pattern.
	
2005-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>
