@@ -212,10 +212,13 @@ for each lstSection in lstSections
         strAttributes=""
         for each fld in lstFields
           strAttribute = ftbSection.returnValue(fld, rec).asString
-          if((strSection="Valves")and(fld.getAlias.lcase = "setting")
-            and(strAttribute.contains("closed")))then
-            strAttribute = "closed"
-          end  
+          if((strSection="Valves")and(fld.getAlias.lcase = "setting"))then
+            if(strAttribute.contains("closed"))then
+              strAttribute = "closed"
+            elseif(strAttribute.contains("open"))then
+              strAttribute = "open"
+            end    
+          end
           strAttributes = strAttributes++fld.getAlias.lcase+"="+strAttribute.quote
         end
         strAttributes = strAttributes++"node1="+strFirstNodeID.quote
